--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -79,6 +79,11 @@
                                                 R{{details.price}}</h1>
                                             <p>{{ details.description }}</p>
                                         </div>
+                                        <form action='' method='post'>
+                        {% csrf_token %}
+                        {{ quantity_selector }}
+                        <button class="btn btn-info">Submit</button>
+                    </form>
                                     </div>
                                 </div>
                             </div>
