--- a/store/templates/registration/login.html
+++ b/store/templates/registration/login.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--A very basic login template and the built in Django auth
+system is used-->
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Login</title>
 </head>
 <body>
 <h2>Log In</h2>
