--- a/store/templates/registration/signup.html
+++ b/store/templates/registration/signup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--A basic sign in page using the built in django auth system-->
 <head>
     <meta charset="UTF-8">
     <title>Sign up</title>
