--- a/store/templates/signup.html
+++ b/store/templates/signup.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--A basic signup page to capture new client information-->
 <head>
     <meta charset="UTF-8">
     <title>Sign up</title>
