--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -29,13 +29,12 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-                <!--This is a button that appears when the page is narowed to give access to the naavbar options-->
+                <!--This is a button that appears when the page is narrowed to give access to the navbar options-->
             </button>
             {% if request.path == "/" %}
-
+            <!--The if block allows the category selector to only be available on the home page -->
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <!--A list of the links on the header bar-->
                     <form action='' method='post'>
                         {% csrf_token %}
                         {{form}}
@@ -48,11 +47,14 @@
             <h5 class="my-0 mr-md-auto font-weight-normal">Company name</h5>
             <nav class="my-2 my-md-0 mr-md-3">
                 {% if request.path == '/' %}
+                <!--The if block allows the cart to only be available on the home page, and it points
+                 to home on all other pages-->
                 <a class="p-2 text-dark" href="{% url 'Market:cart_detail' %}">Cart</a>
                 {% else %}
                 <a class="p-2 text-dark" href="{% url 'Market:index' %}">Home</a>
                 {% endif %}
                 {% if user.is_authenticated %}
+                <!--The if block allows the logout to only be available on the if there is a user signed in -->
                 Hi {{ user.username }}!
                 <a class="p-2 text-dark" href="{% url 'logout' %}">Logout</a>
                 {% else %}
