--- a/store/templates/cart_detail.html
+++ b/store/templates/cart_detail.html
@@ -7,9 +7,9 @@
   <div class="container">
     <h1 class="h5">Shopping Cart</h1>
     {% for key, item in request.session.cart.items %}
+    <!--Iterate through the cart items to populate the cart fields-->
     <div data-index="{{item.product_id}}" class="row mb-4 border product-item">
       <div class="col-md-9 col-lg-10 ps-md-3 ps-lg-10">
-
         <div class="border">
           <div class="col border-bottom">
             <div class="row p-3">
@@ -28,8 +28,6 @@
                   Delete
                 </button>
                 </a>
-
-
                   <div class="col-12 text-end">Item Total</div>
               <div class="col-12 text-end"><span class="h6 fw-bold">R{{ item.line_total }}</span></div>
               </div>
@@ -42,16 +40,12 @@
 
     <div class="col-12 text-end">
       <div class="h6 fw-bold">Sub Total: R<div id="subtotal" class="d-inline-flex">{{cart.get_total_price}}</div></div>
-
         <form action="invoice/" method="post">
           {% csrf_token %}
         <button class="btn btn-outline-secondary btn-sm" type="submit" name="invoice" value="invoice">
                   Invoice
                 </button>
         </form>
-
-
-
     </div>
   </div>
 </main>
