Faults with the invoice fixed. Style added to cart and invoice. Index page detail display size fixed.

--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--This is a base template for all the pages-->
 {% load static %}  <!--Loads all static files like css files-->
+{% load cart_tag %}  <!--Loads the cart_tag-->
 <html>
 
 <head>
