--- a/store/templates/cart_detail.html
+++ b/store/templates/cart_detail.html
@@ -3,6 +3,8 @@
 {% block title %}Cart{% endblock %}
 {% block content %}
 
+
+
 <main class="pt-5">
   <div class="container">
     <h1 class="h5">Shopping Cart</h1>
@@ -17,12 +19,13 @@
               <div class="col-4">Qty: {{item.quantity}}</div>
               <div class="col-4">Price per Item</div>
               <div class="col-4 text-end"><span class="h6 fw-bold">R{{ item.price }}</span></div>
-            </div>
+            </iv>
           </div>
           <div class="col">
             <div class="row p-3">
               <div class="col-12">
-                <a href="{% url 'Market:item_clear' item.product_id%}">
+                <!-- code to remove an item when the remove button is clicked -->
+                <a href="{% url "Market:cart_remove" item.product_id %}">
                 <button type="button" id="delete-button" data-index="{{item.product_id}}"
                   class="btn btn-outline-secondary btn-sm delete-button" name="delete_button">
                   Delete
@@ -36,6 +39,7 @@
         </div>
       </div>
     </div>
+
     {% endfor %}
 
     <div class="col-12 text-end">
