--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -43,8 +43,8 @@
                                                     <img class="img-fluid" id="image" alt="Responsive image"
                                                          src="{{ product.image.url }}">
                                                     <div class="card-body">
-                                                        <h1 class="card-title pricing-card-title">
-                                                            R{{product.price}}</h1>
+                                                        <h5 class="card-title pricing-card-title">
+                                                            R{{product.price}}</h5>
                                                     </div>
                                                 </div>
                                             </div>
@@ -58,21 +58,18 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="row-sm-4 h-100">
                     <div class="container-fluid" id="right">
-                        <div class="wrap">
-                            <div class="col">
-                                <div class="card mb-4 rounded-3 shadow-sm" style="width:30rem;">
+                                <div class="card mb-4 rounded-3 shadow-sm" style="width:30rem; height:80hv">
                                     <div class="card-header py-3">
                                         <h4 class="my-0 fw-normal">{{details.name}}</h4>
                                         <!--links to the product image-->
-                                        <div class="container-fluid h-100 w-100">
-                                        <img class="img-fluid" id="chosenImage" alt="Responsive image"
-                                             src="{{ details.image.url }}">
+                                        <img class="img-fluid" id="chosenImage" alt="{{ details.name }}"
+                                             src="{{ details.image.url }}" style="width: auto;
+                                        height: 20vw; object-fit: cover;">
                                         </div>
                                         <div class="card-body">
-                                            <h1 class="card-title pricing-card-title">
-                                                R{{details.price}}</h1>
+                                            <h5 class="card-title pricing-card-title">
+                                                R{{details.price}}</h5>
                                             <p>{{ details.description }}</p>
                                         </div>
                                         <form action='' method='post' name="quantity_selector">
@@ -83,9 +80,8 @@
                                         </form>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
+
+
                 </div>
             </div>
         </div>
