--- a/store/templates/invoice.html
+++ b/store/templates/invoice.html
@@ -3,83 +3,107 @@
 {% block title %}Cart{% endblock %}
 {% block content %}
 <!--A rudimentary invoice is drawn up so the client can pay-->
-<div class="page-content container">
-    <div class="page-header text-blue-d2">
-        <h1 class="page-title text-secondary-d1">
-            Invoice
-            <small class="page-info">
-                <i class="fa fa-angle-double-right text-80"></i>
-                ID: #{{invoice_nr}}
-            </small>
-        </h1>
+<div bgcolor="#f6f6f6" style="color: #333; height: 100%; width: 100%;" height="100%" width="100%">
+    <table bgcolor="#f6f6f6" cellspacing="0" style="border-collapse: collapse; padding: 40px;
+    width: 100%;" width="100%">
+        <tbody>
+            <tr>
+                <td width="5px" style="padding: 0;"></td>
+                <td bgcolor="#FFFFFF" style="border: 1px solid #000; clear: both;
+                display: block; margin: 0 auto; max-width: 1000px; padding: 0;">
+                    <table width="100%" style="background: #f9f9f9; border-bottom: 1px solid #eee; border-collapse: collapse; color: #999;">
+                        <tbody>
+                            <tr>
+                                <td width="50%" style="padding: 20px;"><strong style="color: #333; font-size: 24px;">Invoice Nr:{{order.id}}</strong></td>
+                                <td align="right" width="50%" style="padding: 20px;"></td>
+                            </tr>
+                            <tr>
+                                <td width="50%" style="padding: 20px;"><strong style="color: #333; font-size: 24px;">{{ user.username}}</strong></td>
+                                <td align="right" width="50%" style="padding: 20px;">Date: {{ order.created }}</td>
+                        </tbody>
+                    </table>
+                </td>
+                <td style="padding: 0;"></td>
+                <td width="5px" style="padding: 0;"></td>
+            </tr>
+            <tr>
+                <td width="5px" style="padding: 0;"></td>
+                <td style="border: 1px solid #000; border-top: 0; clear: both; display: block; margin: 0 auto; max-width: 1000px; padding: 0;">
+                    <table cellspacing="0" style="border-collapse: collapse; border-left: 1px solid #000; margin: 0 auto; max-width: 1000px;">
+                        <tbody>
+                            <tr>
+                                <td valign="top"  style="padding: 20px;">
+                                    <h3
+                                        style="
+                                            border-bottom: 1px solid #000;
+                                            color: #000;
+                                            font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+                                            font-size: 18px;
+                                            font-weight: bold;
+                                            line-height: 1.2;
+                                            margin: 0;
+                                            margin-bottom: 15px;
+                                            padding-bottom: 5px;
+                                        "
+                                    >
+                                        Summary
+                                    </h3>
 
-    <div class="container px-0">
-        <div class="row mt-4">
-            <div class="col-12 col-lg-12">
-                <hr class="row brc-default-l1 mx-n1 mb-4" />
-                <div class="row">
-                    <div class="col-sm-6">
-                        <div>
-                            <span class="text-sm text-grey-m2 align-middle">To:</span>
-                            <span class="text-600 text-110 text-blue align-middle">{{user.username}}</span>
-                        </div>
-                    </div>
-                    <div class="text-95 col-sm-6 align-self-start d-sm-flex justify-content-end">
-                        <hr class="d-sm-none" />
-                        <div class="text-grey-m2">
-                            <div class="mt-1 mb-2 text-secondary-m1 text-600 text-125">
-                                Invoice
-                            </div>
-
-                            <div class="my-2">
-                                <i class="fa fa-circle text-blue-m2 text-xs mr-1"></i>
-                                <span class="text-600 text-90">ID:</span>
-                                #{{user.id}}
-                            </div>
-
-                            <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i>
-                                <span class="text-600 text-90">Issue Date:</span> {{order_date}} </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="mt-4">
-                    {% for item in invoice_items %}
-                    <div class="text-95 text-secondary-d3">
-                        <div class="row mb-2 mb-sm-0 py-25">
-                            <div class="d-none d-sm-block col-1"></div>
-                            <div class="col-9 col-sm-5">{{ item.product }}</div>
-                            <div class="d-none d-sm-block col-2">{{ item.quantity }}</div>
-                            <div class="d-none d-sm-block col-2 text-95">{{ item.price }}</div>
-                            <div class="col-2 text-secondary-d2">{{ item.line_total }}</div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                    <div class="row border-b-2 brc-default-l2"></div>
-
-                    <div class="row mt-3">
-                        <div class="col-12 col-sm-7 text-grey-d2 text-95 mt-2 mt-lg-0">
-
-                        </div>
-
-                        <div class="col-12 col-sm-5 text-grey text-90 order-first order-sm-last">
-                            <div class="row my-2">
-                                <div class="col-7 text-right">
-                                    Total
-                                </div>
-                                <div class="col-5">
-                                    <span class="text-120 text-secondary-d1">R {{ cart_total }}</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <hr />
-                </div>
-            </div>
-        </div>
-    </div>
+                                    <table>
+                                        <thead>
+                                            <tr>
+                                                <th class="text-left">PRODUCT |</th>
+                                                <th class="text-left"></th>
+                                                <th class="text-left"></th>
+                                                <th class="text-left"></th>
+                                                <th class="text-right">UNIT PRICE|</th>
+                                                <th class="text-left"></th>
+                                                <th class="text-left"></th>
+                                                <th class="text-left"></th>
+                                                <th class="text-right">QtY |</th>
+                                                <th class="text-left"></th>
+                                                <th class="text-left"></th>
+                                                <th class="text-left"></th>
+                                                <th class="text-right">TOTAL |</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                        {% for item in invoice_items %}
+                                            <tr>
+                                                <td class="text-left"><h3>{{ item.product }}</h3></td>
+                                                <th class="text-left"></th>
+                                                <th class="text-left"></th>
+                                                <th class="text-left"></th>
+                                                <td class="unit">${{ item.price }}</td>
+                                                <th class="text-left"></th>
+                                                <th class="text-left"></th>
+                                                <th class="text-left"></th>
+                                                <td class="qty">{{ item.quantity}}</td>
+                                                <th class="text-left"></th>
+                                                <th class="text-left"></th>
+                                                <th class="text-left"></th>
+                                                <td class="total">{{ item.line_total }}</td>
+                                            </tr>
+                                        {% endfor %}
+                                        </tbody>
+                                        <tfoot>
+                                            <tr>
+                                                <td colspan="2"></td>
+                                                <td colspan="2">GRAND TOTAL</td>
+                                                <td>R {{ order.order_total }}</td>
+                                            </tr>
+                                        </tfoot>
+                                    </table>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </td>
+                <td width="5px" style="padding: 0;"></td>
+            </tr>
+        </tbody>
+    </table>
 </div>
-    </div>
-    <script>
-    </script>
+
+
 {% endblock %}
